package factory;

public interface Content {
    void display();
}