package factory;

public abstract class ContentFactory {
    public abstract Content createContent();
}