package factory;

public class QuizContent implements Content {
    @Override
    public void display() {
        System.out.println("Quiz: Starting quiz content...");
    }
}