package factory;

public class TextContent implements Content {
    @Override
    public void display() {
        System.out.println("Text Lesson: Reading text content...");
    }
}