package strategy;

public interface RecommendationStrategy {
    String recommendCourse(String username);
}